# ShadowPlayer-BLumia

./: .gitignore  README.md
DailyBuild/: Makefile  Makefile.Debug  Makefile.Release  object_script.ShadowPlayer.Debug  object_script.ShadowPlayer.Release  ui_lrcbar.h  ui_osd.h  ui_playlist.h  ui_shadowplayer.h
DailyBuild/release/: Makefile  Makefile.Debug  Makefile.Release  PlayList.sdpl  moc_MyGlobalShortCut.cpp  moc_fftdisplay.cpp  moc_lrcbar.cpp  moc_mini.cpp  moc_osd.cpp  moc_playlist.cpp  moc_shadowlabel.cpp  moc_shadowplayer.cpp  moc_spslider.cpp  moc_thread.cpp  object_script.ShadowPlayer.Debug  qrc_res.cpp  ui_mini.h
ShadowPlayer/: CMakeLists.txt  FlacPic.h  ID3v2Pic.h  ShadowPlayer.pro  ShadowPlayer.pro.user.2.7pre1  ShadowPlayer.pro.user.a19b98a  ShadowPlayer.pro.user.bak  blAlbumartretriever.cpp  blAlbumartretriever.h  compile.bat  lrcbar.cpp  lrcbar.h  lyrics.cpp  lyrics.h  lyricsmanager.cpp  lyricsmanager.h  main.cpp  mini.cpp  mini.h  mini.ui  osd.cpp  player.cpp  player.h  playlist.cpp  playlist.h  playlist.ui  res.qrc  shadowplayer.cpp  shadowplayer.h  shadowplayer.ui  thread.cpp  thread.h  文件列表实现说明备忘.txt
ShadowPlayer/ICO/asset/: Full.psd  Next.psd  Pause.psd  Prev.psd  Stop.psd
ShadowPlayer/MyGlobalShortCut/: MyGlobalShortCut.cpp
ShadowPlayer/recycle/: _ID3v2Pic.h  __ID3v2Pic.h  xmini.ui
Source(Stable)/: ShadowPlayer141104乱搞前备份.rar  ShadowPlayerBL140728跳点循环完毕.rar  ShadowPlayerBL140731迷你加上托盘.rar  ShadowPlayerBL140802专辑封面初步.rar  ShadowPlayerBL140806任务栏进度条.rar  ShadowPlayerBL140812从文件夹导入.rar  ShadowPlayerBL140814迷你加进度条.rar  ShadowPlayerBL140815均衡器和频谱.rar  ShadowPlayerBL140816播放列表模式.rar  ShadowPlayerBL140817子文件夹遍历.rar  ShadowPlayerBL140820小幅度维护版.rar  ShadowPlayerBL140930问题修复补档.rar  ShadowPlayerBL141026问题修复补档.rar  ShadowPlayerBL150215封面内存读取.rar  ShadowPlayerTag.rar
